Fix content panel and timeline panel scrolling issues

--- a/src/components/ContentPanel/ContentPanel.css
+++ b/src/components/ContentPanel/ContentPanel.css
@@ -5,6 +5,8 @@
   background: var(--bg-surface);
   color: var(--text-primary);
   min-width: 0;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .content-meta {
