Remove title & subtitle from content panel

--- a/src/components/ContentPanel/ContentPanel.css
+++ b/src/components/ContentPanel/ContentPanel.css
@@ -24,7 +24,7 @@
 .content-subtitle {
   color: var(--text-secondary);
   font-size: 0.85rem;
-  margin: 0 0 0.5rem;
+  margin: 0.75rem 0 0 0;
 }
 
 .content-tags {
